feat: cleaning up